# miss-alignment

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  VISUALIZATION.md  cliff.toml  data.json  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
.junie/: guidelines.md
dataset_prep/emdb/: random_emdb_entries.json  seed_42_sample.txt  seed_43_sample.txt
dataset_prep/shrec/: preprocess.py
datasets/: check_titles.py  emdb_rescale.py  emdb_sample.py  random_emdb_entries.json
docs/: config_template.yaml  run_in_warptools.md  usage.md
evaluation/: shrec.py
examples/: correlate_reconstruction.py  etomo_to_warp.py  plot_data.py  plot_shift_generation.py  pool_dataset_example.py  postproc.py  preproc.py  preproc_empiar-10499.py  profile_create_pool_reconstruction.py  shrec.py  visualize_alignment_optimization.py  visualize_optimization_results.ipynb
examples/shrec/: _raw_shrec_to_pickles.py  at2-alignment.json  at3-alignment.json  compare_to_ground_truth.py  compare_to_ground_truth_aretomo.py  how-to-run.md  plot_alignment_comparison.py  preproc.py  running_aretomo.md  shrec_experiment_downsample_errors_per_ts.json  shrec_experiment_downsample_result_summary.txt
examples/shrec/iterations/: iter0.json  iter1.json  iter2.json  iter3.json  iter4.json  iter5.json  iter6.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1a03c7c647bb2253___init___py.html  z_1a03c7c647bb2253__augmentation_py.html  z_1a03c7c647bb2253__reconstruction_worker_py.html  z_1a03c7c647bb2253_io_py.html  z_1a03c7c647bb2253_shift_generation_py.html  z_1a03c7c647bb2253_training_datamodule_py.html  z_1a03c7c647bb2253_training_dataset_py.html  z_3bcb7d5be3bd832a___init___py.html  z_3bcb7d5be3bd832a__compact_py.html  z_3bcb7d5be3bd832a__resnet_py.html  z_3bcb7d5be3bd832a_models_py.html  z_bce84911b92d4127___init___py.html  z_bce84911b92d4127_correlation_py.html  z_bce84911b92d4127_optimize_global_py.html  z_bce84911b92d4127_optimize_iterative_py.html  z_bce84911b92d4127_optimize_spline_py.html  z_bce84911b92d4127_parallel_py.html  z_bce84911b92d4127_statistics_py.html  z_bce84911b92d4127_tilt_series_py.html  z_bce84911b92d4127_utils_py.html  z_f96b223613185b92_gradcam_py.html  z_fca724b9922f04c0___init___py.html  z_fca724b9922f04c0__cli_py.html  z_fca724b9922f04c0_prepare_stacks_py.html  z_fca724b9922f04c0_preprocessing_py.html  z_fca724b9922f04c0_train_py.html  z_fca724b9922f04c0_utils_py.html
paper/: illustrate_shifts.ipynb  manuscript.md
paper/notebooks/: illustrate_shifts.ipynb  triplet_clone.mrc  triplet_degraded.mrc  triplet_perfect.mrc  view_triplet.py
paper/notebooks/shrec_eval/: ablation_experiment.ipynb  architecture_experiment.ipynb  utils.py  visualize_iterations.ipynb  visualize_reconstruction_slices.ipynb
src/miss_alignment/: __init__.py  align.py  align_backend.py  align_shrec.py  config_template.yaml  download.py  prepare_stacks.py  preprocessing.py  train.py  utils.py
src/miss_alignment/data/: io.py  (+10 more)
tests/: test_shift_generation.py
tests/alignment/: test_optimize_global.py  test_statistics.py  test_tilt_series.py
tests/data/: test_augmentation.py  test_io.py  test_pool_dataset.py  test_reconstruction_worker.py  test_shift_generation.py
tests/models/: test_models.py  test_resnet.py
(+32 files in other folders)
