# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

# https://peps.python.org/pep-0621/
[project]
name = "miss-alignment"
version = "0.1.0"
description = "She has a chaotic good alignment for tilt-series."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Marten Chaillet", email = "martenchaillet@gmail.com" }]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",    
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
# add your package dependencies here
dependencies = [
    "jmespath>=1",
    "mrcfile>=1.5.4",
    "numpy>=2",
    "torch>=2.2",
    "torch-fourier-rescale>=0.1",
    "torch-fourier-slice>=0.3.1",
    "torch-fourier-shift>=0.0.4",
    "torch-fourier-filter",
    "torch-tiltxcorr>=0.0.5",
    "torch-cubic-spline-grids",
    "torch-grid-utils>=0.0.5",
    "torch-tomogram @ git+https://github.com/McHaillet/torch-tomogram.git@use_torch_projectors",
    "tqdm>=4.67.1",
    "scipy",
    "lightning",
    "tensorboard",
    "standard-imghdr",  # workaround for tensorboard with python 3.13
    "typer",
    "zenodo-get",
    "matplotlib",
    "warpylib",
]

[project.urls]
homepage = "https://github.com/warpem/miss-alignment"
repository = "https://github.com/warpem/miss-alignment"

[project.optional-dependencies]
# add dependencies used for testing here
test = ["pytest", "pytest-cov"]
# add anything else you like to have in your dev environment here
dev = [
    "ipython",
    "pdbpp",
    "requests>=2.32.3", # https://github.com/pdbpp/pdbpp
    "rich", # https://github.com/Textualize/rich,
    "pre-commit>=4.1.0",
    "ruff>=0.9.9",
    "matplotlib"
]
#all = [
#    {include-group = "test"},
#    {include-group = "dev"},
#    {include-group = "lint"},
#]

[tool.uv]
default-groups = ["test", "dev"]

# same as console_scripts entry point
[project.scripts]
miss-alignment = "miss_alignment:cli"

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["miss_alignment"]

# https://github.com/mgedmin/check-manifest#configuration
# add files that you want check-manifest to explicitly ignore here
# (files that are in the repo but shouldn't go in the package)
[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
]
